--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <button id="new-grid">Grid Oluştur</button>
+    <div class="btn">   
+        <button id="new-grid">Grid Oluştur</button>
+        <button id="open">Renk Modunu Aç</button>
+        <button id="close">Renk Modunu Kapa</button>
+    </div>
     <div id="container"></div>
 
     <script src="script.js"></script>
