--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="new-grid">Grid Oluştur</button>
         <button id="open">Renk Modunu Aç</button>
         <button id="close">Renk Modunu Kapa</button>
+        <button id="reset">Sıfırla</button>
     </div>
     <div id="container"></div>
 
