Giriş yazısı eklendi

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <button id="close">Renk Modunu Kapa</button>
         <button id="reset">Sıfırla</button>
     </div>
-    <div id="container"></div>
+    <div id="container">
+        <span id="text">Grid Oluştur'a Tıkla!</span>
+    </div>
 
     <script src="script.js"></script>
 </body>
